# mochi-server

./: .gitignore  LICENSE  README.md  pyproject.toml  verify_phase0.py
app_specs/: SKILL.md  example_tool_call_stream.py  future_plans.md  mochi_server_evolution_steps.md  mochi_server_specs.md  ollama_tool_calls.md
app_specs/phases/: PHASE0_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md
src/mochi_server/: __init__.py  __main__.py  app.py  config.py  constants.py  dependencies.py
src/mochi_server/agents/: __init__.py
src/mochi_server/models/: __init__.py  chat.py  health.py  models.py  sessions.py  status.py  system_prompts.py  tools.py
src/mochi_server/ollama/: __init__.py  client.py  types.py
src/mochi_server/routers/: __init__.py  chat.py  health.py  models.py  sessions.py  system_prompts.py  tools.py
src/mochi_server/services/: __init__.py  context_window.py  system_prompts.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_chat_api.py  test_chat_stream_api.py  test_chat_with_tools.py  test_session_api.py  test_status_api.py  test_system_prompts_api.py  test_tool_api.py
tests/unit/: __init__.py  test_app.py  test_chat_service.py  test_context_window.py  test_health.py  test_models_api.py  test_ollama_client.py  test_session.py  test_session_manager.py  test_system_prompts.py  test_tool_config.py  test_tool_discovery.py  test_tool_execution.py  test_tool_schema.py
tools/filesystem_tools/: __init__.py
(+12 files in other folders)
