[project]
name = "mochi-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lennart Pollvogt", email = "lennartpollvogt@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
